@startuml Polydoctor

class VaccinationCenter {
    id: int
    name: string
    address: string
    city: string
    'attibuts en private
}

class User {
    login: string
    password: string
    mail:string
    firstname: string
    lastname: string
    'attributs en protected et pas en private

}

class Doctor {
    getPatient()
    getRdv()
    validateVaccination()
}
class Admin {
    getAllDoctors()
    getDoctorByLogin()
    getDoctorByLastname()
    getAllRdv()
    getRdvById()
    getRdvByDate()
    createDoctor()
    modifyDoctor()
    deleteDoctor()
    createRdv()
    modifyRdv()
    deleteRdv()
}

Class SuperAdmin{
    getAllCenters()
    getCenterById()
    getCenterByName()
    getCenterByCity()
    getAllAdmins()
    getAdminByLogin()
    getAdminByLastname()
    createCenter()
    deleteCenter()
    modifyCenter()
    createAdmin()
    deleteAdmin()
    modifyAdmin()
}

class Patient {
    mail: string
    phone: string
    birthdate: date
    firstname: string
    lastname: string
    carteVitale: file
    'file upload Sam en charge
    'attributs en private
    reserverRdv()
}

class Rdv {
    id: number
    date: Date
    'attributs en private
}

'héritage
Doctor --|> User
Admin --|> User
SuperAdmin --|> User


'action
Rdv "*" -- "1" Patient : réserve <
Doctor "1" -- "*" Rdv : vaccine pendant >
Rdv "*" -- "1" VaccinationCenter : a lieu à >
VaccinationCenter "*" -- "*" Doctor : exerce à <

SuperAdmin "1" -- "*" VaccinationCenter : gère les centres >
Admin "1" -- "1" VaccinationCenter : gère un centre >
SuperAdmin "1" -- "*" User : gère users >

@enduml
